--- a/backend/backend1/package.json
+++ b/backend/backend1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reltime-code",
+  "name": "backend1",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -14,11 +14,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.7.7",
-    "express": "^4.19.2",
-    "socket.io": "^4.7.5"
+    "axios": "^1.10.0",
+    "express": "^5.1.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.10"
   }
 }
