--- a/backend/backend1/package.json
+++ b/backend/backend1/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.10.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "socket.io": "^4.8.1"
   },
